--- a/index.ipynb
+++ b/index.ipynb
@@ -80,7 +80,7 @@
     "if player_choice.issubset(set(car_loc)):\n",
     "    #pick either of the goat doors if the player chose the car\n",
     "    reveal_idx = random.randint(0,1)\n",
-    "    reveal_loc = set(goat_locs[reveal_idx])\n",
+    "    reveal_loc = set([goat_locs[reveal_idx])\n",
     "\n",
     "else:\n",
     "    #pick the door that the player didn't choose and the one that is not the car\n",
