Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -38,9 +38,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Car Location: [1]\n",
+      "Players Choice: {1}\n",
+      "Host Opens: {2}\n",
+      "New Player Choice: {3}\n",
+      "Outcome Stayed: 1\n",
+      "Outcome Switched: 0\n"
+     ]
+    }
+   ],
    "source": [
     "import random\n",
     "all_doors = set([1,2,3])\n",
