Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +129,7 @@
     "    if player_choice.issubset(set(car_loc)):\n",
     "        #pick either of the goat doors if the player chose the car\n",
     "        reveal_idx = random.randint(0,1)\n",
-    "        reveal_loc = goat_locs[reveal_idx]\n",
+    "        reveal_loc = set([goat_locs[reveal_idx]])\n",
     "\n",
     "    else:\n",
     "        #pick the door that the player didn't choose and the one that is not the car\n",
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
