Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -158,7 +158,7 @@
     "    print('Outcome Stayed: ' + str(stay_win))\n",
     "    print('Outcome Switched: ' + str(switch_win))    \n",
     "    \n",
-    "    return stay_win, switch_win\n",
+    "    return y['stay_win'], switch_win\n",
     "\n"
    ]
   },
