Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -158,7 +158,8 @@
     "    print('Outcome Stayed: ' + str(stay_win))\n",
     "    print('Outcome Switched: ' + str(switch_win))    \n",
     "    \n",
-    "    y['stay_win'], y['switch_win']\n",
+    "    y['stay_win'] \n",
+    "    y['switch_win']\n",
     "    \n",
     "    return \n",
     "\n"
