Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -161,7 +161,7 @@
     "    y['stay_win'] = stay_win\n",
     "    y['switch_win'] = switch_win\n",
     "    \n",
-    "    return \n",
+    "    return stay_w\n",
     "\n"
    ]
   },
@@ -6233,21 +6233,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0    (1, 0)\n",
-       "1    (0, 1)\n",
-       "2    (1, 0)\n",
-       "3    (0, 1)\n",
-       "4    (1, 0)\n",
+       "0    None\n",
+       "1    None\n",
+       "2    None\n",
+       "3    None\n",
+       "4    None\n",
        "dtype: object"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
