Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -161,7 +161,7 @@
     "    y['stay_win'] = stay_win\n",
     "    y['switch_win'] = switch_win\n",
     "    \n",
-    "    return stay_w\n",
+    "    return stay_win,switch_win\n",
     "\n"
    ]
   },
