Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -6227,8 +6227,7 @@
     }
    ],
    "source": [
-    "y=pd.DataFrame()\n",
-    "df = df.apply(lambda x: monty_hall(x))"
+    "app"
    ]
   },
   {
