Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -6227,7 +6227,7 @@
     }
    ],
    "source": [
-    "applied_df=df.apply(lambda x: monty_hall(x),axis=)"
+    "applied_df=df.apply(lambda x: monty_hall(x),axis='columns',result)"
    ]
   },
   {
