--- a/index.ipynb
+++ b/index.ipynb
@@ -6233,7 +6233,7 @@
     }
    ],
    "source": [
-    "applied_df=df.apply(lambda x: monty_hall(x),axis='columns',result_type='expand')"
+    "applied_df=df.apply(lambda x: monty_hall(x),axis='columns',result_type='expand',columns=['Switch Win',])"
    ]
   },
   {
