Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -154,9 +154,9 @@
     "    else:\n",
     "        switch_win = 0\n",
     "        \n",
-    "    print('New Player Choice: ' + str(new_player_choice))\n",
-    "    print('Outcome Stayed: ' + str(stay_win))\n",
-    "    print('Outcome Switched: ' + str(switch_win))    \n",
+    "#     print('New Player Choice: ' + str(new_player_choice))\n",
+    "#     print('Outcome Stayed: ' + str(stay_win))\n",
+    "#     print('Outcome Switched: ' + str(switch_win))    \n",
     "    \n",
     "#     y['stay_win'] = stay_win\n",
     "#     y['switch_win'] = switch_win\n",
@@ -207,7 +207,7 @@
     }
    ],
    "source": [
-    "applied_df=df.apply(lambda x: monty_hall(x),axis='columns',result_type='expand',columns=['Switch Win','Stay Win'])"
+    "applied_df=df.apply(lambda x: monty_hall(x),axis='columns',result_type='expand')\n"
    ]
   },
   {
