Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -116,7 +116,7 @@
     "def monty_hall(idx):\n",
     "    #Step 1: Car is placed behind a random door\n",
     "    car_loc = [random.randint(1,3)]\n",
-    "    print('Car Location: ' + str(car_loc))\n",
+    "#     print('Car Location: ' + str(car_loc))\n",
     "\n",
     "    #Step 2: Player selects a door\n",
     "    player_choice = set([random.randint(1,3)])\n",
@@ -135,7 +135,7 @@
     "        #pick the door that the player didn't choose and the one that is not the car\n",
     "        reveal_loc = all_doors^(player_choice.union(set(car_loc)))\n",
     "\n",
-    "    print('Host Opens: ' + str(reveal_loc))\n",
+    "#     print('Host Opens: ' + str(reveal_loc))\n",
     "\n",
     "\n",
     "    #Step 4: Host gives player option to stay or switch doors\n",
