--- a/index.ipynb
+++ b/index.ipynb
@@ -120,7 +120,7 @@
     "\n",
     "    #Step 2: Player selects a door\n",
     "    player_choice = set([random.randint(1,3)])\n",
-    "    print('Player''s Choice: '+ str(player_choice))\n",
+    "#     print('Player''s Choice: '+ str(player_choice))\n",
     "\n",
     "    #Step 3: Host selects a door revealing a goat that's \n",
     "    #not the player's door\n",
