--- a/index.ipynb
+++ b/index.ipynb
@@ -207,7 +207,8 @@
     }
    ],
    "source": [
-    "applied_df=df.apply(lambda x: monty_hall(x),axis='columns',result_type='expand')\n"
+    "applied_df=df.apply(lambda x: monty_hall(x),axis='columns',result_type='expand')\n",
+    "applied_df.rename()"
    ]
   },
   {
