Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -6260,7 +6260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -6274,13 +6274,13 @@
        "dtype: object"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.head()"
+    "applied_df.head()"
    ]
   },
   {
