Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -209,7 +209,7 @@
    ],
    "source": [
     "applied_df=df.apply(lambda x: monty_hall(x),axis='columns',result_type='expand')\n",
-    "applied_df.rename(columns=['Switch Win','Stay Win'],inplace=True)"
+    "applied_df.rename(columns={'0':'Stay Win'},inplace=True)"
    ]
   },
   {
