--- a/index.ipynb
+++ b/index.ipynb
@@ -206,7 +206,7 @@
    "source": [
     "applied_df=df.apply(lambda x: monty_hall(x),axis='columns',result_type='expand')\n",
     "applied_df.rename(columns={'0':'Stay Win','1':'Switch Win'},inplace=True)\n",
-    "df = pd.concat(df,applied_df)"
+    "df = pd.concat([df,applied_df],axis=)"
    ]
   },
   {
