--- a/index.ipynb
+++ b/index.ipynb
@@ -186,13 +186,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
     "applied_df=df.apply(lambda x: monty_hall(x),axis='columns',result_type='expand')\n",
-    "applied_df.rename(columns={'0':'Stay Win','1':'Switch Win'},inplace=True)\n",
-    "df = pd.concat([df,applied_df],axis='columns')"
+    "df = pd.concat([df,applied_df],axis='columns')\n",
+    "df.rename(columns={'0':'Stay Win','1':'Switch Win'},inplace=True)\n"
    ]
   },
   {
