Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,18 +186,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
     "applied_df=df.apply(lambda x: monty_hall(x),axis='columns',result_type='expand')\n",
     "df = pd.concat([df,applied_df],axis='columns')\n",
-    "df.rename(columns={'0':'Stay Win','1':'Switch Win'},inplace=True)\n"
+    "df.rename(index={'0':'Stay Win','1':'Switch Win'},inplace=True)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -236,20 +236,20 @@
        "    <tr>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
-       "      <td>1</td>\n",
        "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2</td>\n",
        "      <td>2</td>\n",
-       "      <td>1</td>\n",
        "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>3</td>\n",
        "      <td>3</td>\n",
-       "      <td>1</td>\n",
        "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>4</td>\n",
@@ -264,13 +264,13 @@
       "text/plain": [
        "   Iteration  0  1\n",
        "0          0  0  1\n",
-       "1          1  1  0\n",
-       "2          2  1  0\n",
-       "3          3  1  0\n",
+       "1          1  0  1\n",
+       "2          2  0  1\n",
+       "3          3  0  1\n",
        "4          4  0  1"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
