--- a/index.ipynb
+++ b/index.ipynb
@@ -192,7 +192,7 @@
    "source": [
     "applied_df=df.apply(lambda x: monty_hall(x),axis='columns',result_type='expand')\n",
     "df = pd.concat([df,applied_df],axis='columns')\n",
-    "df.rename(index={'0':'Stay Win','1':'Switch Win'},inplace=True)\n"
+    "df.columns=['Iteration','Switch Win','']\n"
    ]
   },
   {
