Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -257,26 +257,71 @@
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>995</td>\n",
+       "      <td>995</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>996</td>\n",
+       "      <td>996</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>997</td>\n",
+       "      <td>997</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>998</td>\n",
+       "      <td>998</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>999</td>\n",
+       "      <td>999</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>1000 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Iteration  Stay Win  Switch Win\n",
-       "0          0         0           1\n",
-       "1          1         0           1\n",
-       "2          2         0           1\n",
-       "3          3         0           1\n",
-       "4          4         0           1"
+       "     Iteration  Stay Win  Switch Win\n",
+       "0            0         0           1\n",
+       "1            1         0           1\n",
+       "2            2         0           1\n",
+       "3            3         0           1\n",
+       "4            4         0           1\n",
+       "..         ...       ...         ...\n",
+       "995        995         0           1\n",
+       "996        996         1           0\n",
+       "997        997         1           0\n",
+       "998        998         0           1\n",
+       "999        999         0           1\n",
+       "\n",
+       "[1000 rows x 3 columns]"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.head()"
+    "df"
    ]
   },
   {
