Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -322,7 +322,7 @@
    ],
    "source": [
     "for idx,row df.iterrows():\n",
-    "    row['P_Stay_Win']"
+    "    row['P_Stay_Win'] = "
    ]
   },
   {
