Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -204,22 +204,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0"
+       "pandas.core.series.Series"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 105,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df['Stay Win'].iloc[1]"
+    "type(df['Stay Win'].iloc[0:1])"
    ]
   },
   {
