Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -218,9 +218,7 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "sum(df['Stay Win'].iloc[0:1000])"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -349,7 +347,7 @@
    ],
    "source": [
     "for idx,row df.iterrows():\n",
-    "    row['P_Stay_Win'] = "
+    "    row['P_Stay_Win'] = sum(df['Stay Win'].iloc[0:1000])"
    ]
   },
   {
