Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -347,7 +347,7 @@
    ],
    "source": [
     "for idx,row df.iterrows():\n",
-    "    row['P_Stay_Win'] = sum(df['Stay Win'].iloc[0:1000])"
+    "    row['P_Stay_Win'] = sum(df['Stay Win'].iloc[0:idx])"
    ]
   },
   {
