--- a/index.ipynb
+++ b/index.ipynb
@@ -347,6 +347,7 @@
    ],
    "source": [
     "for idx,row df.iterrows():\n",
+    "    temp = \n",
     "    row['P_Stay_Win'] = sum(df['Stay Win'].iloc[0:idx]))"
    ]
   },
