--- a/index.ipynb
+++ b/index.ipynb
@@ -347,8 +347,8 @@
    ],
    "source": [
     "for idx,row df.iterrows():\n",
-    "    temp = \n",
-    "    row['P_Stay_Win'] = sum(df['Stay Win'].iloc[0:idx]))"
+    "    temp = df['Stay Win'].iloc[0:idx])\n",
+    "    row['P_Stay_Win'] = "
    ]
   },
   {
