Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -347,8 +347,8 @@
    ],
    "source": [
     "for idx,row df.iterrows():\n",
-    "    temp = df['Stay Win'].iloc[0:idx])\n",
-    "    row['P_Stay_Win'] = "
+    "    temp = df['Stay Win'].iloc[0:idx]\n",
+    "    row['P_Stay_Win'] = sum(temp)/"
    ]
   },
   {
