--- a/index.ipynb
+++ b/index.ipynb
@@ -218,7 +218,9 @@
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "df['Stay Win'].iloc[0:idx]"
+   ]
   },
   {
    "cell_type": "code",
@@ -240,7 +242,7 @@
    "source": [
     "for idx,row in df.iterrows():\n",
     "    temp = df['Stay Win'].iloc[0:idx]\n",
-    "    print(size(temp))\n",
+    "    print((temp))\n",
     "    row['P_Stay_Win'] = sum(temp)/len(temp)"
    ]
   },
