Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -204,16 +204,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "324"
+       "Series([], Name: Stay Win, dtype: int64)"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 112,
      "metadata": {},
      "output_type": "execute_result"
     }
