Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
@@ -213,13 +213,13 @@
        "Series([], Name: Stay Win, dtype: int64)"
       ]
      },
-     "execution_count": 112,
+     "execution_count": 113,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df['Stay Win'].iloc[0:idx]"
+    "df['Stay Win'].iloc[0:0]"
    ]
   },
   {
