Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -250,8 +250,9 @@
    "source": [
     "for idx,row in df.iterrows():\n",
     "    print(idx)\n",
-    "    if idx == 0\n",
-    "    temp = df['Stay Win'].iloc[0:idx]\n",
+    "    if idx == 0:\n",
+    "        temp = df['Stay Win'].iloc[0:idx]\n",
+    "    else:\n",
     "    print((temp))\n",
     "    row['P_Stay_Win'] = sum(temp)/len(temp)"
    ]
