--- a/index.ipynb
+++ b/index.ipynb
@@ -251,8 +251,9 @@
     "for idx,row in df.iterrows():\n",
     "    print(idx)\n",
     "    if idx == 0:\n",
-    "        temp = df['Stay Win'].iloc[0:idx]\n",
+    "        temp = df['Stay Win'].iloc[0:]\n",
     "    else:\n",
+    "        temp = df['Stay Win'].iloc[0:idx]\n",
     "    print((temp))\n",
     "    row['P_Stay_Win'] = sum(temp)/len(temp)"
    ]
