Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -236,7 +236,7 @@
     "    else:\n",
     "        temp = df['Stay Win'].iloc[0:idx]\n",
     "        row['P_Stay_Win'] = sum(temp)/len(temp)\n",
-    "    "
+    "    df['P_Stay_']"
    ]
   },
   {
