Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,12 +236,12 @@
     "    else:\n",
     "        temp = df['Stay Win'].iloc[0:idx]\n",
     "        P_Stay_Win = sum(temp)/len(temp)\n",
-    "    df['P_Stay_Win'] = "
+    "    df['P_Stay_Win'] = P_Stay_Win"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [
     {
@@ -268,6 +268,7 @@
        "      <th>Iteration</th>\n",
        "      <th>Stay Win</th>\n",
        "      <th>Switch Win</th>\n",
+       "      <th>P_Stay_Win</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -276,45 +277,50 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
+       "      <td>0.324324</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
+       "      <td>0.324324</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2</td>\n",
        "      <td>2</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
+       "      <td>0.324324</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>3</td>\n",
        "      <td>3</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
+       "      <td>0.324324</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>4</td>\n",
        "      <td>4</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
+       "      <td>0.324324</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Iteration  Stay Win  Switch Win\n",
-       "0          0         0           1\n",
-       "1          1         0           1\n",
-       "2          2         0           1\n",
-       "3          3         0           1\n",
-       "4          4         0           1"
+       "   Iteration  Stay Win  Switch Win  P_Stay_Win\n",
+       "0          0         0           1    0.324324\n",
+       "1          1         0           1    0.324324\n",
+       "2          2         0           1    0.324324\n",
+       "3          3         0           1    0.324324\n",
+       "4          4         0           1    0.324324"
       ]
      },
-     "execution_count": 122,
+     "execution_count": 124,
      "metadata": {},
      "output_type": "execute_result"
     }
