Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -241,6 +241,8 @@
     }
    ],
    "source": [
+    "def calc_p_win(in)\n",
+    "\n",
     "for idx,row in df.iterrows():\n",
     "    if idx == 0:\n",
     "        temp = df['Stay Win'].iloc[0]\n",
