Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -241,7 +241,8 @@
     }
    ],
    "source": [
-    "def calc_p_win(in)\n",
+    "def calc_p_win(input):\n",
+    "    \n",
     "\n",
     "for idx,row in df.iterrows():\n",
     "    if idx == 0:\n",
